# fleximon-system-startup

./: CMakeLists.txt  vdemo_aux_functions.sh  vdemo_start.in
component_scripts/: component_coordination  component_fleximon_monitor  component_management  component_node_server  component_roscore  component_roslaunch  component_rsblogger  component_spreaddaemon  component_teachin_app  component_ur5_microservice
data/: spread.conf
demos/: hmi-2015.in
